# RustCProject

./: .gitignore  CMakeLists.txt  Makefile  README.md  cbindgen.toml  compil.sh
cproject/includes/lib/: gpu.hpp  pointer.hpp  rclib.hpp  utils.h  utils.hpp
cproject/src/: main.cpp
rc_lib/: Cargo.toml
rc_lib/error_manager/: Cargo.toml
rc_lib/error_manager/src/: lib.rs
rc_lib/gpu/: Cargo.toml
rc_lib/gpu/src/: lib.rs
rc_lib/pointer/: Cargo.toml
rc_lib/src/: lib.rs  main.rs  values.rs
rc_lib/utils/: Cargo.toml  build.rs
rc_lib/utils/src/: lib.rs
